<resources>
    <string name="app_name">DoctorPlzSaveMe</string>
    <string name="record">Records</string>
    <string name="edit_record">Edit Record</string>
    <string name="view_problems">View Problems</string>
    <string name="action_search">Search</string>
    <string name="problems">Problems</string>
    <string name="problem_detail">Problem Detail</string>
    <string name="view_edit_problem">View/Edit Problem</string>
    <string name="edit_date">Edit Start Date</string>
    <string name="edit_problem">Edit Problem</string>
    <string name="edit_desc">Edit Description</string>
    <string name="view_add_records">View/Add Records</string>
    <string name="view_problem">View Problem</string>
    <string name="edit">Edit</string>
    <string name="delete_problem">Delete Problem</string>
    <string name="delete_record">Delete Record</string>
    <string name="view_locations">View Locations</string>
    <string name="upload_body_location">Body Location Photos</string>
    <string name="view_edit_profile">View/Edit Profile</string>
    <string name="search_for_records">Search for Records</string>
    <string name="no_desc">No description added!</string>
    <string name="edit_problem_hint">Enter Problem Title here</string>
    <string name="edit_desc_hint">Enter Description here</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="toaster_title">Problem Updated!</string>
    <string name="toaster_desc">Description Updated!</string>
    <string name="toaster_date">Date Updated!</string>
    <string name="view_records">view records</string>
    <string name="view_add_comment">view/add comment</string>
    <string name="title_activity_main_maps">Record/Problem Locations</string>
    <string name="patient_or_cp">Are you a patient or care provider?</string>
    <string name="patient_button">PATIENT</string>
    <string name="care_provider_button">CARE PROVIDER</string>
    <string name="your_patient">Your Patients</string>
    <string name="comments">Comments</string>

    <string name="new_patient_title">New Patient</string>
    <string name="new_patient">It looks like you are a new patient! Please enter your info below.</string>
    <string name="email_hint">email address</string>
    <string name="phone_number_hint">phone number</string>
    <string name="create_profile_button">CREATE PROFILE</string>

    <string name="patient_menu_title">Patient Menu</string>
    <string name="view_problems_button">View Problems</string>
    <string name="view_locations_button">View Locations</string>
    <string name="upload_body_location_photo_button">Upload Body Location Photo</string>
    <string name="view_edit_profile_button">View/Edit Profile</string>

    <string name="problems_title">Problems</string>
    <string name="Xrecords"> records</string>
    <string name="menu_view_edit_records">View/Add Records</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="no_problem_available">There are no recorded Problems (Good for you!) \nAdd one using the button below :(</string>
    <string name="date_started">Date started:</string>
    <string name="custom_date">Custom Date</string>
    <string name="now_date">Now Date</string>

    <string name="view_locations_title">Record/Problem Locations</string>

    <string name="view_edit_profile_title">Your Profile</string>
    <string name="user_id">User ID: </string>

    <string name="cancel_button">CANCEL</string>
    <string name="save_changes_button">SAVE CHANGES</string>

    <string name="view_edit_records_title"> Records</string>
    <string name="menu_view_edit_record">View/Edit Record</string>
    <string name="view_record_photos">VIEW PHOTOS</string>

    <string name="record_info_title">Record Info</string>
    <string name="record_title_hint">Record Title (optional)</string>
    <string name="record_comment_hint">Record Comment (optional)</string>
    <string name="tap_add_photo">Tap to add a photo!</string>
    <string name="indicate_where">Please indicate where it is on your body</string>
    <string name="geolocation_title">Geolocation</string>
    <string name="back_cancel_changes">BACK (CANCEL CHANGES)</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="save_record">SAVE RECORD</string>
    <string name="no_record_available">There are no Records for this Problem! \nAdd one using the button below to start tracking!</string>

    <string name="search_problem">Search for problems by keyword</string>
    <string name="related_problems">RELATED PROBLEMS</string>

    <string name="search_records">Search for records</string>
    <string name="keyword">KEYWORD</string>
    <string name="geolocation">GEOLOCATION</string>
    <string name="body_location">BODY LOCATION</string>
    <string name="search_records_keyword">Search for records by keyword</string>
    <string name="related_records">RELATED RECORDS</string>
    <string name="enter_location">Enter a location...</string>
    <string name="title_activity_add_geolocation2">Map</string>
    <string name="title_activity_camera">CameraActivity</string>

    <string name="welcome">Welcome</string>
    <string name="no_title">no title"</string>
    <string name="no_comment">no comment"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_problem">ViewProblemActivity</string>
    <string name="title_detail">Details</string>
    <string name="title_bodylocation">Body Location</string>
    <string name="title_photo">Photos</string>
    <string name="title_map">Geolocation</string>
    <string name="timestamp">Timestamp</string>
    <string name="add_a_patient">Add a Patient</string>
    <string name="add_a_comment">Add a Comment</string>


    <string name="no_location">No location are saved for this Record!\nYou can add one in the Edit Records menu!</string>
    <string name="change_body_photo">Change Body \nLocation Photo</string>

    <string name="no_photo">No photos are saved for this Record!\nYou can add one in the Edit Records menu!</string>
    <string name="no_bodylocation">No Body Location are saved for this Record!\nYou can add one in the Edit Records menu!</string>
</resources>

