<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground">

    <EditText
        android:id="@+id/editRecordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/record_title_hint"
        android:inputType="textPersonName"
        android:padding="6dp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editRecordComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/record_comment_hint"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:lines="8"
        android:padding="6dp"
        android:background="@color/common_google_signin_btn_text_dark_disabled"
        app:layout_constraintTop_toBottomOf="@id/editRecordTitle" />

    <Button
        android:id="@+id/nextButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/backButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>