<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="32dp"
    android:background="@color/loginFragmentBackground"
    tools:context=".LogInFragments.NewProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/user_id_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:ems="10"
            android:textColor="@color/drawableWhite"
            android:textColorHint="@color/hintForeground"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:inputType="text"
            android:backgroundTint="@color/drawableWhite"
            android:nextFocusDown="@+id/emailInputText"
            android:hint="username (8 or more char)"/>

        <EditText
            android:id="@+id/emailInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:textColor="@color/drawableWhite"
            android:textColorHint="@color/hintForeground"
            android:backgroundTint="@color/drawableWhite"
            android:imeOptions="actionNext"
            android:hint="@string/email_hint"
            android:nextFocusDown="@+id/phoneInputText"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/phoneInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:textColor="@color/drawableWhite"
            android:textColorHint="@color/hintForeground"
            android:backgroundTint="@color/drawableWhite"
            android:hint="@string/phone_number_hint"
            android:inputType="phone"/>

        <Button
            android:id="@+id/createProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:textColor="@color/drawableWhite"
            android:textColorHint="@color/hintForeground"
            android:background="@drawable/button_border"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/create_profile_button"/>
    </LinearLayout>

</FrameLayout>